# invoke-xr

./: README.md  convert_select_categories.ipynb  inventory.csv  main.py  pyproject.toml  server.py
templates/: index.html
