[project]
name = "invoke-xr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "jupyter>=1.1.1",
    "k3d>=2.17.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.1",
    "langchain-experimental>=0.4.1",
    "langchain-ollama>=1.0.1",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "pycollada>=0.9.2",
    "tqdm>=4.67.1",
    "trimesh>=4.10.1",
]
